# data-engineer-test

./: README.md  pyproject.toml  update_sample.py
data/exam/: 0013642c-eb0b-11eb-98e1-c6d12c9034df.json  00181334-eb09-11eb-98e1-c6d12c9034df.json  001d83ba-eb0d-11eb-98e1-c6d12c9034df.json  00397170-eb0c-11eb-98e1-c6d12c9034df.json  004a037c-eb0d-11eb-98e1-c6d12c9034df.json  006e2e7c-eb09-11eb-98e1-c6d12c9034df.json  009067c8-eb0c-11eb-98e1-c6d12c9034df.json  00be7344-eb0b-11eb-98e1-c6d12c9034df.json  00c904be-eb09-11eb-98e1-c6d12c9034df.json  00c9910a-eb0d-11eb-98e1-c6d12c9034df.json  00d8b14e-eb08-11eb-98e1-c6d12c9034df.json  00e63e8c-eb0c-11eb-98e1-c6d12c9034df.json  00f9e242-eb0d-11eb-98e1-c6d12c9034df.json  011798d6-eb09-11eb-98e1-c6d12c9034df.json  01364aa2-eb0d-11eb-98e1-c6d12c9034df.json  0136f222-eb08-11eb-98e1-c6d12c9034df.json  013c18e8-eb0c-11eb-98e1-c6d12c9034df.json  0163270e-eb0b-11eb-98e1-c6d12c9034df.json  016ec3d6-eb09-11eb-98e1-c6d12c9034df.json  018f0be2-eb08-11eb-98e1-c6d12c9034df.json  01928278-eb0c-11eb-98e1-c6d12c9034df.json  01af9580-eb0b-11eb-98e1-c6d12c9034df.json  01cc8882-eb0d-11eb-98e1-c6d12c9034df.json  01e33b22-eb08-11eb-98e1-c6d12c9034df.json  01e717b6-eb0c-11eb-98e1-c6d12c9034df.json  02171908-eb0b-11eb-98e1-c6d12c9034df.json  02707af4-eb09-11eb-98e1-c6d12c9034df.json  027780ca-eb0d-11eb-98e1-c6d12c9034df.json  02afbe46-eb0c-11eb-98e1-c6d12c9034df.json  02e0ee90-eb0b-11eb-98e1-c6d12c9034df.json  02fc33ac-eb0c-11eb-98e1-c6d12c9034df.json  0310ac64-eb0d-11eb-98e1-c6d12c9034df.json  0317d038-eb09-11eb-98e1-c6d12c9034df.json  (+67 more)
(+200 files in other folders)
