[tool.poetry]
name = "data-engineer-test"
version = "0.1.0"
description = ""
authors = ["Rodrigo L. Gil <rodrigo@neuralmed.com.br>"]

[tool.poetry.dependencies]
python = "^3.8"
Faker = "^10.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
